prusti-tests/tests/verify_overflow/ui/core_proof/Counterexamples/loop.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/loop.rs:6:11
   |
6  | #[ensures(result != 16)]
   |           ^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/loop.rs:7:1
   |
7  | / fn spurious() -> i32 {
8  | |     let mut x = 10;
9  | |     let mut y = 1;
10 | |     while (x > 0) {
...  |
17 | |     y
18 | | }
   | |_^
note: counterexample for "x"
       value:   10
  --> $DIR/loop.rs:8:17
   |
8  |     let mut x = 10;
   |                 ^^
note: counterexample for "x"
       value:   0
  --> $DIR/loop.rs:13:9
   |
13 |         body_invariant!(x >= 0 && y > 0);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: counterexample for "x"
       value:   -1
  --> $DIR/loop.rs:14:9
   |
14 |         x = x - 1;
   |         ^^^^^^^^^
note: counterexample for "y"
       value:   1
  --> $DIR/loop.rs:9:17
   |
9  |     let mut y = 1;
   |                 ^
note: counterexample for "y"
       value:   15
  --> $DIR/loop.rs:13:9
   |
13 |         body_invariant!(x >= 0 && y > 0);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: counterexample for "y"
       value:   16
  --> $DIR/loop.rs:15:9
   |
15 |         y = y + 1;
   |         ^^^^^^^^^

error: aborting due to previous error

